samples/_failures_safe/1761547030_b79203_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc0de798.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_bc0de798.c:172: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_bc0de798.c:171:5: error: expected declaration or statement at end of input
  171 |     switch
      |     ^~~~~~
